--- a/.dvc_cc/cc_all_ids.yml
+++ b/.dvc_cc/cc_all_ids.yml
@@ -2,3 +2,5 @@ cc_0001_testnew:
 - 5d9ae75e632a02ba4200b8e6
 cc_0001_testnewnew:
 - 5d9aff12c0a11f6758b1e754
+cc_0002_testnewnew:
+- 5d9aff7f632a02ba4200b8e8
