build the pipeline for the first test run with DVC-CC

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,5 @@
 ['remote "dvc_connection"']
-url = ssh://baumapa@dt1.f4.htw-berlin.de:/mnt/md0/baumapa/github.com/n0dabba/dvc-cc-test.git
+url = ssh://baumapa@avocado01.f4.htw-berlin.de:/data/ldap/Data-Version-Control-Cache/github.com/n0dabba/dvc-cc-test.git
 ask_password = true
 [core]
 remote = dvc_connection
