run [dvc/train.dvc] in the experiment setup: cc_0005_lastone

--- a/cc_execution_file.red.yml
+++ b/cc_execution_file.red.yml
@@ -1,3 +1,37 @@
+batches:
+  - inputs:
+      git_authentication_json:
+        class: File
+        connector:
+          access: {username: '{{github_com_username}}', password: '{{github_com_password}}', email: '{{github_com_email}}'}
+          command: dvc-cc-connector
+      git_path_to_working_repository: "github.com"
+      git_working_repository_owner: "n0dabba"
+      git_working_repository_name: "dvc-cc-test.git"
+      git_name_of_branch: "cc_0005_lastone"
+      dvc_authentication_json:
+        class: File
+        connector:
+          access: {username: '{{avocado01_f4_htw_berlin_de_username}}', password: '{{avocado01_f4_htw_berlin_de_password}}'}
+          command: dvc-cc-connector
+      dvc_servername: "avocado01.f4.htw-berlin.de"
+      dvc_path_to_working_repository: "/data/ldap/Data-Version-Control-Cache/github.com/n0dabba/dvc-cc-test.git"
+      dvc_remote_directory_sshfs:
+        class: Directory
+        connector:
+            command: "red-connector-ssh"
+            mount: true
+            access:
+              host: 'avocado01.f4.htw-berlin.de'
+              port: 22
+              auth:
+                username: '{{avocado01_f4_htw_berlin_de_username}}'
+                password: '{{avocado01_f4_htw_berlin_de_password}}'
+              writable: True
+              dirPath: '/data/ldap/Data-Version-Control-Cache/github.com/n0dabba/dvc-cc-test.git'
+      dvc_file_to_execute: 'dvc/train.dvc'
+    outputs: {}
+
 cli:
   baseCommand: [dvc-cc-agent]
   class: CommandLineTool
@@ -75,3 +109,4 @@ execution:
     batchConcurrencyLimit: 12
     retryIfFailed: false
 redVersion: '8'
+
